--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "nodemon": "^2.0.13",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "static": "^2.0.0"
   }
 }
